2010-07-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Don't use tar GNU-ism since it's not necessary
	in this context.

2010-07-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Remove bashisms and declare as sh script.

2010-07-07  Colin Watson  <cjwatson@ubuntu.com>

	* term/gfxterm.c (grub_gfxterm_background_image_cmd): Fix
	indentation.

2010-07-06  Colin Watson  <cjwatson@ubuntu.com>

	* conf/common.rmk (grub_probe_SOURCES): Add disk/raid5_recover.c
	and disk/raid6_recover.c.
	* conf/i386-pc.rmk (grub_setup_SOURCES): Likewise.
	* conf/sparc64-ieee1275.rmk (grub_setup_SOURCES): Likewise.

2010-07-06  Colin Watson  <cjwatson@ubuntu.com>

	* term/gfxterm.c (repaint_schedulded): Rename to ...
	(repaint_scheduled): ... this.  Update all callers.
	(repaint_was_schedulded): Rename to ...
	(repaint_was_scheduled): ... this.  Update all callers.

2010-07-06  Colin Watson  <cjwatson@ubuntu.com>

	* util/deviceiter.c (grub_util_iterate_devices): Skip MD devices,
	which we expect to be handled by upper layers.

2010-07-06  BVK Chaitanya  <bvk.groups@gmail.com>

	* bus/usb/usbhub.c: #include time.h header.

2010-07-06  Colin Watson  <cjwatson@ubuntu.com>

	* fs/reiserfs.c (grub_reiserfs_iterate_dir): Zero out first byte of
	entry_name also for entries without stat blocks (e.g. ".."); fixes
	corruption of the first entry in a directory.

2010-07-06  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/00_header.in: Process GRUB_THEME and GRUB_BACKGROUND
	after setting gfxterm as the active terminal.  GRUB_BACKGROUND
	doesn't work otherwise.

2010-07-05  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Features): Update list of supported file systems.
	(GNU/Linux): Update for GRUB 2.
	(Serial terminal): Remove mention of --disable-serial, which was a
	GRUB Legacy configure option.  Update instructions to use
	`terminal_input' and `terminal_output' rather than `terminal'.